--- a/kantemir.index.html
+++ b/kantemir.index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Кантемир Элебесов — Гитара для начинающих</title>
+  <title>Soul in A minor — Гитара для начинающих</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -184,7 +184,7 @@
 <body>
 
   <header>
-    <h1>Кантемир Элебесов — гитара для начинающих</h1>
+    <h1>Soul in A minor — гитара для начинающих</h1>
     <p>Научу играть с нуля. Без стресса. В своём темпе.</p>
     <nav>
       <ul>
@@ -227,11 +227,11 @@
     <div class="card-container">
       <div class="card">
         <p>“Раньше думал, что у меня нет слуха. Но Кантемир объясняет так просто, что я уже играю три песни сам. Спасибо огромное!”</p>
-        <strong>— Николай, 35 лет</strong>
+        <strong>— Николай, 23 лет</strong>
       </div>
       <div class="card">
         <p>“Очень понятные и добрые занятия. Теперь гитара не пугает, а радует!”</p>
-        <strong>— Алина, 27 лет</strong>
+        <strong>— Алина, 25 лет</strong>
       </div>
     </div>
   </section>
@@ -244,7 +244,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Кантемир Элебесов — обучение гитаре. Все права защищены.
+    &copy; 2025 Soul in A minor — обучение гитаре. Все права защищены.
   </footer>
 
 </body>
